# personal-bot

./: .env.sample  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  README.org  conf.toml  conf.toml.sample  default.nix  docker-compose.dev.yml  docker-compose.yml  docker.nix  flake.nix  pyproject.toml  requirements.txt  shell-poetry.nix  shell.nix
.github/workflows/: docker.yml
.travis/: docker_build
personal-bot/: main.py  txt_to_pic.py
personal_bot/: main.py  txt_to_pic.py
src/: main.py  txt_to_pic.py
