[tool.poetry]
name = "personal-bot"
version = "0.1.0"
description = "List of automated commands to be done in Telegram"
authors = ["Ebrahim <dearrude@tfwno.gf>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyrogram = "^1.0.7"
tgcrypto = "^1.2.2"
pillow = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
