[tool.poetry]
name = "personal-bot"
version = "0.1.0"
description = "List of automated commands to be done in Telegram"
authors = ["Ebrahim <dearrude@tfwno.gf>"]
license = "MIT"
packages = [
    {include="personal-bot", from="."},
]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.41"
TgCrypto = "^1.2.3"
APScheduler = "^3.9.1"
python-dotenv = "^0.20.0"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
